MD Settings: Hide Profile Shortcut switch for single-profile machines.

The Profile Shortcut switch should be hidden for single-profile
machines. This is a regression from Old Options.

BUG=666264
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2525783002
Cr-Commit-Position: refs/heads/master@{#434280}

Former-commit-id: 8171ffd98a17ea9944d346994065b9e8050ca183